# voice_pepe_module-G

./: guide_for_configuring_pyproject-toml_file.rtf  pyproject.toml
utility_scripts/: metadata_retriever.py
voice_pepe/: __init__.py  __main__.py  voicepepe_module.py
